pridanie abstraktu do clanku

--- a/clanok.tex
+++ b/clanok.tex
@@ -32,7 +32,12 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+Ja som si vybral na rámcovú tému modelovanie v softvérovom inžinierstve program Autodesk Maya
+- je to program využívaný na vytváranie 3d animácií. 
+Plánujem sa hlavne zamerať na opis tohto programu, ako funguje, kde sa používa, v akom 
+programovacom jazyku sa píše a tak ďalej. Rád by som ešte spomenul výhody a nevýhody, či 
+sa tento program oplatí používať a na to by som potom nadviazal porovnanie s inými populárnymi programami
+na animácie.
 \end{abstract}
 
 
