pridanie úvodu a názvu prvého článku

--- a/clanok.tex
+++ b/clanok.tex
@@ -44,16 +44,17 @@ na animácie.
 
 \section{Úvod}
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
+V tomto článku sa budeme zaoberať programom Autodesk Maya. Vysvetlím Vám, čo to je za program a potom Vám bližšie tento program opíšem v ďaľších častiach
+t.j. napríklad : vytváranie reálneho vlasu, svalových rýh, vytvranie hier a programov pomocou unity 3D a Maya atď.
 
-Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
-Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
+Tu je explicitná štruktúra článku.
+Autodesk Maya program je vysvetlený v tejto časti.~\ref{AM}.
 Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
 Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
-\section{Nejaká časť} \label{nejaka}
+\section{Autodesk Maya - čo to je?} \label{AM}
 
 Z obr.~\ref{f:rozhod} je všetko jasné. 
 
