pridanie názvu článkom a podčlánkom

--- a/clanok.tex
+++ b/clanok.tex
@@ -45,76 +45,67 @@ na animácie.
 \section{Úvod}
 
 V tomto článku sa budeme zaoberať programom Autodesk Maya. Vysvetlím Vám, čo to je za program a potom Vám bližšie tento program opíšem v ďaľších častiach
-t.j. napríklad : vytváranie reálneho vlasu, svalových rýh, vytvranie hier a programov pomocou unity 3D a Maya atď.
+t.j. napríklad : vytváranie reálneho vlasu, zostavenie svalov, vytvranie hier a programov pomocou unity 3D a Maya atď.
 
 Tu je explicitná štruktúra článku.
 Autodesk Maya program je vysvetlený v tejto časti.~\ref{AM}.
-Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
+použitie programu je v tejto časti.~\ref{pouzitie}.
 Záverečné poznámky prináša časť~\ref{zaver}.
 
 
 
 \section{Autodesk Maya - čo to je?} \label{AM}
 
-Z obr.~\ref{f:rozhod} je všetko jasné. 
+%Z obr.~\ref{f:rozhod} je všetko jasné. 
 
 \begin{figure*}[tbh]
-\centering
+%\centering
 %\includegraphics[scale=1.0]{diagram.pdf}
-Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
-\caption{Rozhodujúci argument.}
-\label{f:rozhod}
+%Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
+Autodesk Maya výkonný softvér, ktorý umožňuje 3D animovanie, modelovanie, simulácie, vykresľovanie a ďalšie. Je robustný a všestranný a mnohí ho považujú za priemyselný štandard pre animácie. Veľa známych filmových štúdií používa Autodesk Maya, vrátane  Blue Sky Studios, Framestore, Moving Picture Company. Tento softvér bol použitý na animáciu známych a ocenených filmov ako sú „Frozen“ a „Wreck It Ralph“.
+
+Pomocou Maya môžete vytvárať 3D prvky pre film, televíziu a videohry. Zvyčajne to zahŕňa niekoľko rôznych komponentov umenia vrátane vytvárania 3D modelov, zostavovania postavy, animácie, dynamiky, maľovania, osvetlenia a vykresľovania. Maya obsahuje intuitívne a ľahko použiteľné nástroje na zjednodušenie všetkých týchto úloh.
+
+Autodesk Maya je dostupný pre operačné systémy Windows, Mac a Linux. Na 1 rok Vás bude tento program stáť 1700 dolárov, čo je v prepočte okolo 1500 eúr.
+%\caption{Rozhodujúci argument.}
+%\label{f:rozhod}
 \end{figure*}
 
 
 
-\section{Iná časť} \label{ina}
+\section{Použitie Autodesk Maya} \label{pouzitie}
 
-Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
+Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{pouzitie:vlas}), a potom na ešte nejaké (časť~\ref{pouzitie:sval})(časť~\ref{pouzitie:unity}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
 
 Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
 
 
-\subsection{Nejaké vysvetlenie} \label{ina:nejake}
+\subsection{vytváranie reálneho vlasu} \label{pouzitie:vlas}
 
-Niekedy treba uviesť zoznam:
-
-\begin{itemize}
-\item jedna vec
-\item druhá vec
-	\begin{itemize}
-	\item x
-	\item y
-	\end{itemize}
-\end{itemize}
-
-Ten istý zoznam, len číslovaný:
-
-\begin{enumerate}
-\item jedna vec
-\item druhá vec
-	\begin{enumerate}
-	\item x
-	\item y
-	\end{enumerate}
-\end{enumerate}
+tu bude clanok
 
 
-\subsection{Ešte nejaké vysvetlenie} \label{ina:este}
+
+\subsection{vytváranie svalov} \label{pouzitie:sval}
+
+tu bude clanok
 
 \paragraph{Veľmi dôležitá poznámka.}
 Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
 
 
+\subsection{Unity 3D a Maya} \label{pouzitie:unity}
+\begin{enumerate}
+\item v hre
+Content Creation for a 3D Game with Maya and Unity 3D
+\item vo vyucbe
+A Gaming Environment to Train Teachers Diagnose Children Learning Disabilities
 
-\section{Dôležitá časť} \label{dolezita}
-
-
-
-
-\section{Ešte dôležitejšia časť} \label{dolezitejsia}
-
-
+	%\begin{enumerate}
+	%\item x
+	%\item y
+	%\end{enumerate}
+\end{enumerate}
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
