pridanie textu do autodesk maya - co to je

--- a/clanok.tex
+++ b/clanok.tex
@@ -51,22 +51,15 @@ Použitie Unity 3D a Maya.~\ref{3d}.
 Záverečné poznámky prináša časť~\ref{zaver}.
 
 
+
 \section{Autodesk Maya - čo to je?} \label{AM}
 
-%Z obr.~\ref{f:rozhod} je všetko jasné. 
+Autodesk Maya je program, ktorý umožňuje 3D animovanie, modelovanie, simulácie, vykresľovanie a ďalšie. Je všestranný a mnohí ho považujú za priemyselný štandard pre animácie. Veľa známych filmových štúdií používa Autodesk Maya ako sú napríklad Blue Sky Studios, Framestore, Moving Picture Company. Tento softvér bol použitý na animovanie známych a ocenených filmových rozprávok ako sú „Frozen“ a „Wreck It Ralph“.\\
 
-\begin{figure*}[tbh]
-%\centering
-%\includegraphics[scale=1.0]{diagram.pdf}
-%Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
-Autodesk Maya výkonný softvér, ktorý umožňuje 3D animovanie, modelovanie, simulácie, vykresľovanie a ďalšie. Je robustný a všestranný a mnohí ho považujú za priemyselný štandard pre animácie. Veľa známych filmových štúdií používa Autodesk Maya, vrátane  Blue Sky Studios, Framestore, Moving Picture Company. Tento softvér bol použitý na animáciu známych a ocenených filmov ako sú „Frozen“ a „Wreck It Ralph“.
-
-Pomocou Maya môžete vytvárať 3D prvky pre film, televíziu a videohry. Zvyčajne to zahŕňa niekoľko rôznych komponentov umenia vrátane vytvárania 3D modelov, zostavovania postavy, animácie, dynamiky, maľovania, osvetlenia a vykresľovania. Maya obsahuje intuitívne a ľahko použiteľné nástroje na zjednodušenie všetkých týchto úloh.
+Pomocou Maya môžete vytvárať 3D prvky pre filmy, seriály a dokonca aj pre videohry. Zahŕňa niekoľko rôznych komponentov umenia vrátane vytvárania 3D modelov, zostavovania postavy, animácií, dynamiky, osvetlenia a vykresľovania. Maya obsahuje ľahko použiteľné nástroje na zjednodušenie všetkých týchto úloh.\\
 
 Autodesk Maya je dostupný pre operačné systémy Windows, Mac a Linux. Na 1 rok Vás bude tento program stáť 1700 dolárov, čo je v prepočte okolo 1500 eúr.
-%\caption{Rozhodujúci argument.}
-%\label{f:rozhod}
-\end{figure*}
+
 
 
 \section{Iná časť} \label{ina}
