pridanie novej sekcie mel a python a text

--- a/clanok.tex
+++ b/clanok.tex
@@ -62,11 +62,13 @@ Autodesk Maya je dostupný pre operačné systémy Windows, Mac a Linux. Na 1 ro
 
 
 
-\section{Iná časť} \label{ina}
+\section{MEL a Python} \label{python}
+\paragraph{MEL}
+celým názvom Maya Embedded Language je skriptový jazyk. Funkcie ako menu, buttony a mnohé iné, ktoré sa v programe nachádzajú, sú napísane cez tento MEL.
+\paragraph{Python}
+patrí do rebríčka jedných z najpopulárnejších a najobľúbenejších programovacích jazykov. Používa sa napríklad na výrobu rôznych hier, programov a aj na umelú inteligenciu.\\
 
-Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
-
-Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
+Prečo som tu spomenul python? MEL je hlavný jazyk programu Autodesk Maya, ale tento program taktiež podporuje písanie v pythone. Výhoda v používaní pythonu je tá, že python narozdiel od MEL má možnosť class managementu, taktiež je štruktúra kódu ľahšie čítateľná a porozumiteľná. MEL má iba funkcie, ktoré súvisia s Mayou narozdiel od pythonu, ktorý je široko podporovaný rôznymi softvérami.\cite{evaluationmaya}
 
 
 
