odstranenie niektorych sekcii a pridanie novej vyhody a nevyhody

--- a/clanok.tex
+++ b/clanok.tex
@@ -72,18 +72,8 @@ Prečo som tu spomenul python? MEL je hlavný jazyk programu Autodesk Maya, ale 
 
 
 
-\section{vytváranie reálneho vlasu} \label{pouzitie}
+\section{Výhody a nevýhody} \label{vyhnevyh}
 
-tu bude clanok
-
-
-
-\subsection{vytváranie svalov} \label{pouzitie:sval}
-
-tu bude clanok
-
-\paragraph{Veľmi dôležitá poznámka.}
-Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom.
 
 
 \subsection{Unity 3D a Maya} \label{pouzitie:unity}
