pridanie sekcie porovnanie a text

--- a/clanok.tex
+++ b/clanok.tex
@@ -76,25 +76,23 @@ Prečo som tu spomenul python? MEL je hlavný jazyk programu Autodesk Maya, ale 
 
 
 
-\subsection{Unity 3D a Maya} \label{pouzitie:unity}
-\begin{enumerate}
-\item v hre
-Content Creation for a 3D Game with Maya and Unity 3D
-\item vo vyucbe
-A Gaming Environment to Train Teachers Diagnose Children Learning Disabilities
+\section{Porovnanie Maya a Blender} \label{porovnanie}
 
-	%\begin{enumerate}
-	%\item x
-	%\item y
-	%\end{enumerate}
-\end{enumerate}
+Vybral som na porovnanie Blender, pretože tieto 2 softvéri sú navonok veľmi podobné. V nasledujúcich bodoch si dovolím Vám ukázať, čo majú spoločné a čo rozdielne.
 
 \begin{itemize}
-\item jedna vec
-\item druhá vec
+\item spoločné
 	\begin{itemize}
-	\item x
-	\item y
+	\item sú podobné, pretože obe sa použivajú na animovanie
+	\item dajú sa použiť na operačných systémoc Windows, Mac OS a Linux
+	\end{itemize}
+
+\item rozdielne
+	\begin{itemize}
+	\item ako som už v úvode spomínal, za použivanie Maya musíte platiť, zatial čo Blender je zadarmo, lebo je open-source
+	\item Maya je viac komplikovaná na používanie ako Blender (pre začiatočníkov)
+	\item Maya je určená skôr väčším firmám, Blender je zas skôr určený pre start-upy alebo začiatočníkom
+	\item za používanie Maya sa platí, takže je silenejšia ako Blender a má menej bugov\cite{educba2021}
 	\end{itemize}
 \end{itemize}
 
