pridanie sekcie pouzitie a text, vymazanie poznamok

--- a/clanok.tex
+++ b/clanok.tex
@@ -96,14 +96,24 @@ Vybral som na porovnanie Blender, pretože tieto 2 softvéri sú navonok veľmi 
 	\end{itemize}
 \end{itemize}
 
-\section{Záver} \label{zaver} % prípadne iný variant názvu
+
+
+\section{Použitie Unity 3D a Maya} \label{3d}
+
+Na to aby sme mohli pokračovať v tejto téme, tak Vám najprv vysvetlím čo je Unity 3D.\\
+
+\emph{Unity 3D} je softvér, ktorý poháňa celý program, je to niečo ako motor. Jeden z naoblúbenejších softvérov na trhu. Je jednoduchý na používanie a nemusíte za to nič platiť. Oblúbený, pretože umožňuje programátorom písať v C? alebo JavaScript. Taktiež má vbudovaný Visual Studio, čiže kód bude prehľadný a ľahšie čítateľný. Ponúka Vám aj nástroje na animácie, aby ste mohli vytvárať Vaše nie len 3D animácie, ale aj 2D.\\
+
+Prečo Unity 3D a Maya? Dôvodom je, že Unity 3D chýba modelovacie schopnosti a v tomto to Maya dopĺňa.\cite{labschutz2011content}\\
+
+Keďže počet prípadov, kde deti s ADHD (porucha pozornosti s hyperaktivitou), dislexiou, disgrafiou a ďaľšími neschopnosťami narastá, vytvorila sa aplikácia pomocou Maya a Unity, ktorá sa volá "Learning Disability Application". Z názvu je už jasné, že sa to bude zaoberať nejakými neschopnosťami alebo postihnutiami. Je to hra/aplikácia určená pre učiteľov, ktorí sa môžu otestovať a dokonca aj naučiť ako sa zachovať a čo robiť , ak búdu učiť takého žiaka. Hra ich prevedie reálnymi situáciami, ktoré môžu nastať a nakonci sú učitelia evaluovaný buď "right decision" (správna voľba) alebo "wrong decision" (nesprávna voľba)\cite{studies}.
 
 
 
-%\acknowledgement{Ak niekomu chcete poďakovať\ldots}
+\section{Záver} \label{zaver}
 
 
-% týmto sa generuje zoznam literatúry z obsahu súboru literatura.bib podľa toho, na čo sa v článku odkazujete
+
 \bibliography{literatura.bib}
-\bibliographystyle{plain} % prípadne alpha, abbrv alebo hociktorý iný
+\bibliographystyle{plain}
 \end{document}
