pridanie vyhod a nevyjopd a zmena uvodu

--- a/clanok.tex
+++ b/clanok.tex
@@ -40,7 +40,7 @@ na animácie.
 
 \section{Úvod}
 
-Nikto nie je príliš starý na rozprávky a hry. Ešte doteraz si rád pozriem nejakú tú rozprávku, zahrám nejaké tie hry, ale už je to inšie. V poslednej dobe si častejšie všímam a uvažujem nad tým, ako dlho muselo trvať, čo sa muselo použiť na spracovanie takejto rozprávky, filmu alebo hry. Preto som si vybral rámcovú tému Autodesk Maya. Zaujalo ma, ako je možné vytvárať také animácie aké existujú a tu som našiel moju odpoveď.
+Hovorí sa, že nikto nie je príliš starý na rozprávky a hry. Ešte doteraz si rád pozriem nejakú tú rozprávku alebo zahrám hry. V poslednej dobe niekedy uvažujem pri tom čo pozerám ako dlho muselo trvať spracovanie alebo čo sa muselo použiť na spracovanie takéhoto niečoho. Preto som si vybral rámcovú tému Autodesk Maya. Celkom ma zaujalo, ako je možné vytvárať niektoré animácie pomocou tohto softvéru, tak som sa vydal na cestu hľadania odpovdí a rozhodol som sa ich s Vami zdieľať.
 
 Tu je explicitná štruktúra článku.
 Autodesk Maya softvér je vysvetlený v tejto časti.~\ref{AM}.
@@ -73,6 +73,23 @@ Prečo som tu spomenul python? MEL je hlavný jazyk programu Autodesk Maya, ale 
 
 
 \section{Výhody a nevýhody} \label{vyhnevyh}
+Tu by som rád spomenul niektoré výhody a nevýhody tohto softvéru.
+
+\paragraph{Výhody}
+\begin{itemize}
+\item umožňuje používateľom pracovať rýchlejšie a efektívnejšie
+\item dokončená práca môže byť rýchlejšie skontrolovaná 
+\item poskytuje veľa funkcií
+\item vytvára dobré rendre
+\end{itemize}
+
+\paragraph{Nevýhody}
+\begin{itemize}
+\item potrebuje veľa času na rendrovanie
+\item pre začiatočníkov celkom náročné na používanie
+\item niekedy crashuje
+\item drahé
+\end{itemize}
 
 
 
