--- a/literatura.bib
+++ b/literatura.bib
@@ -1,48 +1,45 @@
-% ....názov súboru je: literatura.bib
-% kniha
-@book{Coplien:MPD,
-	author = "James O. Coplien",
-	title = "Multi-Paradigm Design for C++",
-	publisher = "Addison-Wesley",
-	year = 1999
+
+@inproceedings{evaluationmaya,
+  doi = {10.1109/iiai-aai.2018.00178},
+  url = {https://doi.org/10.1109/iiai-aai.2018.00178},
+  year = {2018},
+  month = jul,
+  publisher = {{IEEE}},
+  author = {Yusuke Sakai and Satoshi Cho and Hisashi Sato},
+  title = {Development and Evaluation of an Exaggerated Expression Animation Support System Using Maya}
 }
 
-% článok v časopise
-@article{Czarnecki:Staged,
-    author = "Krzysztof Czarnecki and Simon Helsen and Ulrich Eisenecker",
-    title = "Staged Configuration Through Specialization and Multi-Level Configuration of Feature Models",
-    journal = "Software Process: Improvement and Practice",
-    volume = 10,
-    issue = 2,
-    month = apr # "/" # jun,
-    year = "2005",
-    pages = "143--169",
+@misc{educba2021,
+  title={Maya vs Blender - 8 Amazing Differences You Should Know}, 
+  url={https://www.educba.com/maya-vs-blender/},
+  journal={EDUCBA},
+  year={2021},
+  month={May}
 }
 
-% článok v zborníku
-@inproceedings{Czarnecki:Progress,
-	author = "Krzysztof Czarnecki and Chang Hwan Peter Kim",
-	title = "Cardinality-Based Feature Modeling and Constraints: A Progress Report",
-	booktitle = "International Workshop on Software Factories, OOPSLA 2005",
-	month = oct,
-	year = "2005",
-	address = "San Diego, USA",
+@article{labschutz2011content,
+  title={Content creation for a 3D game with Maya and Unity 3D},
+  author={Labsch{\"u}tz, Matthias and Kr{\"o}sl, Katharina and Aquino, Mariebeth and Grash{\"a}ftl, Florian and Kohl, Stephanie},
+  journal={Institute of Computer Graphics and Algorithms, Vienna University of Technology},
+  volume={6},
+  pages={124},
+  year={2011}
 }
 
-% technická správa (nepublikovaná)
-@techreport{Kang:FODA,
-	author = "Kyo C. Kang and Sholom G. Cohen and James A. Hess and William E. Novak and A. Spencer Peterson",
-	title = "Feature-Oriented Domain Analysis ({FODA}): A Feasibility Study",
-	institution = "Software Engineering Institute, Carnegie Mellon University",
-	address = "Pittsburgh, USA",
-	month = nov,
-	year = 1990,
-	number = "CMU/SEI-90-TR-21",
+@inproceedings{studies,
+  doi = {10.1109/icenco.2018.8636127},
+  url = {https://doi.org/10.1109/icenco.2018.8636127},
+  year = {2018},
+  month = dec,
+  publisher = {{IEEE}},
+  author = {Oussama Tahan and Farah Barake},
+  title = {A Gaming Environment to Train Teachers Diagnose Children Learning Disabilities}
 }
 
-% zdroj na webe
-@misc{PLP-Framework,
-	author = "Software Engineering Institute, Carnegie Mellon University",
-	title = "A Framework for Software Product Line Practice---Version 5.0",
-	howpublished = "\url{http://www.sei.cmu.edu/productlines/frame_report/}",
+@misc{educbaa2021,
+  title={what is Maya?: Key Concept: Skills and Scope: Career And Advantage}, 
+  url={https://www.educba.com/what-is-maya/},
+  journal={EDUCBA},
+  year={2021},
+  month={June}
 }
