pridanie obrazkov do textu

--- a/clanok.tex
+++ b/clanok.tex
@@ -6,6 +6,7 @@
 \usepackage{url} 
 \usepackage{hyperref} 
 \usepackage{cite}
+\usepackage{float}
 
 
 
@@ -114,12 +115,27 @@ Vybral som na porovnanie Blender, pretože tieto 2 softvéri sú navonok veľmi 
 
 Na to aby sme mohli pokračovať v tejto téme, tak Vám najprv vysvetlím čo je Unity 3D.\\
 
-\emph{Unity 3D} je softvér, ktorý poháňa celý program, je to niečo ako motor. Jeden z naoblúbenejších softvérov na trhu. Je jednoduchý na používanie a nemusíte za to nič platiť. Oblúbený, pretože umožňuje programátorom písať v C alebo JavaScript. Taktiež má vbudovaný Visual Studio, čiže kód bude prehľadný a ľahšie čítateľný. Ponúka Vám aj nástroje na animácie, aby ste mohli vytvárať Vaše nie len 3D animácie, ale aj 2D.\\
+\emph{Unity 3D} je softvér, ktorý poháňa celý program, je to niečo ako motor. Jeden z naoblúbenejších softvérov na trhu. Je jednoduchý na používanie a nemusíte za to nič platiť. Oblúbený, pretože umožňuje programátorom písať v C\texttt{\#} alebo JavaScript. Taktiež má vbudovaný Visual Studio, čiže kód bude prehľadný a ľahšie čítateľný. Ponúka Vám aj nástroje na animácie, aby ste mohli vytvárať Vaše nie len 3D animácie, ale aj 2D.\\
 
 Prečo Unity 3D a Maya? Dôvodom je, že Unity 3D chýba modelovacie schopnosti a v tomto to Maya dopĺňa.\cite{labschutz2011content}\\
 
 Príklad:
-Keďže počet prípadov, kde deti s ADHD (porucha pozornosti s hyperaktivitou), dislexiou, disgrafiou a ďaľšími neschopnosťami narastá, vytvorila sa aplikácia pomocou Maya a Unity, ktorá sa volá "Learning Disability Application". Z názvu je už jasné, že sa to bude zaoberať nejakými neschopnosťami alebo postihnutiami. Je to hra/aplikácia určená pre učiteľov, ktorí sa môžu otestovať a dokonca aj naučiť ako sa zachovať a čo robiť, ak búdu mať takého študenta. Hra ich prevedie reálnymi situáciami, ktoré môžu nastať a nakonci sú učitelia evaluovaný buď "right decision" (správna voľba) alebo "wrong decision" (nesprávna voľba)\cite{studies}.
+Keďže počet prípadov, kde deti s ADHD (porucha pozornosti s hyperaktivitou), dislexiou, disgrafiou a ďaľšími neschopnosťami narastá, vytvorila sa aplikácia pomocou Maya a Unity, ktorá sa volá "Learning Disability Application". Z názvu je už jasné, že sa to bude zaoberať nejakými neschopnosťami alebo postihnutiami. Je to hra/aplikácia určená pre učiteľov, ktorí sa môžu otestovať a dokonca aj naučiť ako sa zachovať a čo robiť, ak búdu mať takého študenta. Hra ich prevedie reálnymi situáciami, 2 scenáriami (scenário 1 ~\ref{f:scenario1} a scenário 2 ~\ref{f:scenario2}), ktoré môžu nastať a nakonci sú učitelia evaluovaný buď "right decision" (správna voľba) alebo "wrong decision" (nesprávna voľba)\cite{studies}.
+
+\begin{figure*}[h]
+\centering
+\includegraphics[scale=0.37]{scenario 1.png}
+\caption{scenário 1\cite{studies}}
+\label{f:scenario1}
+\end{figure*}
+\begin{figure*}[h]
+\centering
+\includegraphics[scale=0.37]{scenario 2.png}
+\caption{scenário 2\cite{studies}}
+\label{f:scenario2}
+\end{figure*}
+
+
 
 
 
