--- a/clanok.tex
+++ b/clanok.tex
@@ -27,11 +27,11 @@
 \maketitle
 
 \begin{abstract}
-Ja som si vybral na rámcovú tému modelovanie v softvérovom inžinierstve program Autodesk Maya
-- je to program využívaný na vytváranie 3D animácií. 
-Plánujem sa hlavne zamerať na opis tohto programu, ako funguje, kde sa používa, v akom 
-programovacom jazyku sa píše a tak ďalej. Rád by som ešte spomenul výhody a nevýhody, či 
-sa tento program oplatí používať a na to by som potom nadviazal porovnanie s inými populárnymi programami na animácie.
+21. storočie, inak nazývané doba technológií. Keďže technológie okolo nás sú už natoľko rozvinuté, že môžeme napríklad pomocou umelej inteligencie ovládať všetky spotrebiče v domácnosti,
+rozhodol som sa napísať článok na tému, presnejšie na program, o ktorom sa nie veľmi rozpráva v spoločnosti, aj keď veľká časť ľudí o jeho produkty pozná. Je to softvér Autodesk Maya.
+V tomto článku si prejdeme opisom tohto programu, ako funguje, kde sa používa, v akom 
+programovacom jazyku sa píše. Taktiež si spomenieme výhody a nevýhody, či 
+sa tento program oplatí používať a na to by sme potom nadviazali na porovnanie s inými populárnymi programami na animácie.
 \end{abstract}
 
 
@@ -39,6 +39,7 @@ sa tento program oplatí používať a na to by som potom nadviazal porovnanie s
 \section{Úvod}
 
 Hovorí sa, že nikto nie je príliš starý na rozprávky a hry. Ešte doteraz si rád pozriem nejakú tú rozprávku alebo zahrám hry. V poslednej dobe niekedy uvažujem pri tom čo pozerám ako dlho muselo trvať spracovanie alebo čo sa muselo použiť na spracovanie takéhoto niečoho. Preto som si vybral rámcovú tému Autodesk Maya. Celkom ma zaujalo, ako je možné vytvárať niektoré animácie pomocou tohto softvéru, tak som sa vydal na cestu hľadania odpovedí a rozhodol som sa ich s Vami zdieľať.
+
 
 Tu je explicitná štruktúra článku.
 Autodesk Maya softvér je vysvetlený v tejto časti.~\ref{AM}.
