pridanie tabulky a osmej sekcie

--- a/clanok.tex
+++ b/clanok.tex
@@ -47,7 +47,8 @@ Vysvetlenie MEL a Python.~\ref{python}.
 Výhody a nevýhody používania tohto programu sa nachádza tu.~\ref{vyhnevyh}.
 Porovnanie Maya a Blender.~\ref{porovnanie}.
 Použitie Unity 3D a Maya.~\ref{3d}.
-Záverečné poznámky prináša časť~\ref{zaver}.
+Záverečné poznámky prináša časť.~\ref{zaver}.
+Reakcia na témy.~\ref{reakcia}.
 
 
 
@@ -57,8 +58,14 @@ Autodesk Maya je program, ktorý umožňuje 3D animovanie, modelovanie, simulác
 
 Pomocou Maya môžete vytvárať 3D prvky pre filmy, seriály a dokonca aj pre videohry. Zahŕňa niekoľko rôznych komponentov umenia vrátane vytvárania 3D modelov, zostavovania postavy, animácií, dynamiky, osvetlenia a vykresľovania. Maya obsahuje ľahko použiteľné nástroje na zjednodušenie všetkých týchto úloh.\\
 
-Autodesk Maya je dostupný pre operačné systémy Windows, Mac a Linux. Na 1 rok Vás bude tento program stáť 1700 dolárov, čo je v prepočte okolo 1500 eúr.
+Autodesk Maya je dostupný pre operačné systémy Windows, Mac a Linux. Na 1 rok Vás bude tento program stáť 1700 dolárov, čo je v prepočte okolo 1500 eúr. Zahrniem Vám sem aj tabuľu, kde sú spísané rôzne softvérin na akom operačnom systém sa dajú používať a ich cenu na rok.~\ref{f:tabulka}
 
+\begin{table*}[tbh]
+\centering
+\caption{tabulka rôznych softvérov}
+\label{f:tabulka}
+\includegraphics[width=7in]{tabulka.pdf}
+\end{table*}
 
 
 \section{MEL a Python} \label{python}
@@ -138,11 +145,22 @@ Keďže počet prípadov, kde deti s ADHD (porucha pozornosti s hyperaktivitou),
 
 
 
-
-
 \section{Záver} \label{zaver}
 
 V tomto článku som sa snažil Vás oboznámiť so základnými informáciami o Autodesk Maya. Prešli sme od témy kde som Vám vysvetloval čo to je Autodesk Maya až po vytvorenie aplikácie pomocou nej. Tento softvér je hlavne určený pre animátorov a dizajnérov. Ako som už spomínal, neradím Vám použivať tento softvér ak ste nováčik v tomto odbore, kvôli náročnosti a taktiež aby ste nemiňali len tak Vaše peniaze, lebo Maya nie je zadarmo. Je to veľmi dobrý softvér, ktorý si veľa používateľov pochvaľuje. 
+
+
+\section{Reakcia na témy} \label{reakcia}
+
+
+\paragraph{Historické súvislosti.}
+
+
+\paragraph{Technológia a ľudia.}
+
+
+\paragraph{Udržateľnosť a etika.}
+
 
 \bibliography{literatura.bib}
 \bibliographystyle{plain} 
